flying-djl/config_mgmt/gitops/base/flying-web/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: flying-web
    app.kubernetes.io/managed-by: quarkus
  name: flying-web
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: flying-web
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: flying-web
  name: flying-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flying-web
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: flying-web
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_OPTIONS
              value: -Dvertx.metrics.options.enabled=true -Dvertx.metrics.options.registryName=prometheus
          image: quay.io/redhat_naps_da/flying-web:0.0.3
          imagePullPolicy: Always
          name: flying-web
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: '500m '
              memory: 768Mi
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - mountPath: /deployments/config
              name: config
              readOnly: false
      serviceAccountName: flying-web
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: application.properties
                path: application.properties
            name: flying-web
            optional: false
          name: config
