flying-djl/config_mgmt/gitops/base/flying-web/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flying-web
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: flying-web
  wildcardPolicy: None
